# lindera-cc-cedict-builder

./: .gitignore  AUTHORS  CHANGES.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
src/: error.rs  lindera.rs  main.rs  mecab.rs
src/static/: dicrc  unk.def
